syntax = "proto3";

package admin;

option go_package = "internal/proto/admin;adminpb";

import "google/protobuf/empty.proto";

service AppService {
  rpc RegisterApp(RegisterAppRequest) returns (RegisterAppResponse);
  rpc ListApps(ListAppsRequest) returns (ListAppsResponse);
  rpc BlockApp(BlockAppRequest) returns (google.protobuf.Empty);
  rpc UnblockApp(BlockAppRequest) returns (google.protobuf.Empty);
}

message RegisterAppRequest {
  string app_name = 1;
  string app_email = 2;
}

message RegisterAppResponse {
  string app_id = 1;
}

message ListAppsRequest {}

message ListAppsResponse {
  repeated App apps = 1;
}

message App {
  string app_id = 1;
  string app_name = 2;
  string app_email = 3;
  string status = 4;
  string tier = 5;
}

message BlockAppRequest {
  string app_id = 1;
}
